# critter

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  critter.vcxproj
application/: CtrApplication.cpp  CtrApplication.h  CtrHash.cpp  CtrHash.h  CtrLog.cpp  CtrLog.h  CtrMath.h  CtrNonCopyable.h  CtrPlatform.h  CtrTimer.cpp  CtrTimer.h  CtrTitles.cpp  CtrTitles.h  CtrWindow.cpp  CtrWindow.h
codecs/: CtrBitwise.h  CtrCodec.cpp  CtrCodec.h  CtrColorValue.cpp  CtrColorValue.h  CtrDDSCodec.cpp  CtrDDSCodec.h  CtrDataStream.cpp  CtrDataStream.h  CtrFreeImageCodec.cpp  CtrFreeImageCodec.h  CtrImageCodec.h  CtrImageResampler.h  CtrIteratorRange.h  CtrIteratorWrapper.h  CtrPixelConversions.h  CtrPixelFormat.cpp  CtrPixelFormat.h  CtrStringUtilities.cpp  CtrStringUtilities.h  CtrTextureImage.cpp  CtrTextureImage.h
dependencies/assimp/include/assimp/: material.inl
dependencies/cmdLine/: CmdLine.h
dependencies/libzip/: CMakeLists.txt
dependencies/libzip/lib/: CMakeLists.txt  config.h  zip.h  zipint.h
dependencies/libzip/lib64/: zip.lib  zip_d.lib
dependencies/libzip/regress/: get_comment.test
dependencies/pugixml/src/: pugixml.cpp
dependencies/zLib/lib64/: zlibstatic.lib  zlibstaticd.lib
dependencies/zLib/share/pkgconfig/: zlib.pc
input/: CtrCameraManager.cpp  CtrCameraManager.h  CtrDampenedInput.cpp  CtrDampenedInput.h  CtrFocusedInput.cpp  CtrFocusedInput.h  CtrFocusedMovement.cpp  CtrFocusedMovement.h  CtrInput.cpp  CtrInput.h  CtrInputManager.cpp  CtrInputManager.h  CtrInputState.cpp  CtrInputState.h  CtrX360Controller.cpp  CtrX360Controller.h
math/: CtrColor.h  CtrLimits.h  CtrMatrix44.h  CtrMatrixAlgo.h  CtrQuaternion.h  CtrRegion.h  CtrVector2.h  CtrVector3.h  CtrVector4.h
newui/: CtrUIRenderer.cpp  CtrUIRenderer.h  Ctrimgui.cpp  Ctrimgui.h  Ctrnanovg.cpp  ocornut_imgui.cpp  ocornut_imgui.h
nodes/: CtrBrdf.cpp  CtrBrdf.h  CtrCamera.cpp  CtrCamera.h  CtrEntity.cpp  CtrEntity.h  CtrIndexedMesh.cpp  CtrIndexedMesh.h  CtrMesh.cpp  CtrMesh.h  CtrNode.cpp  CtrNode.h  CtrProjectionProperty.cpp  CtrProjectionProperty.h  CtrProperty.cpp  CtrProperty.h  CtrRenderNode.cpp  CtrRenderNode.h  CtrRenderTargetQuad.cpp  CtrRenderTargetQuad.h  CtrRenderTextureProperty.cpp  CtrRenderTextureProperty.h  CtrScene.cpp  CtrScene.h  CtrStreamedMesh.cpp  CtrStreamedMesh.h  CtrTransformNode.cpp  CtrTransformNode.h  CtrTransformProperty.cpp  CtrTransformProperty.h  CtrTypedProperty.h  CtrViewProperty.cpp  CtrViewProperty.h  CtrViewportProperty.cpp  CtrViewportProperty.h
prebuilt/x64/debug/: zipd.lib  zlibstaticd.lib
prebuilt/x64/release/: zip.lib  zlibstatic.lib
renderAPI/: CtrAssetManager.cpp  CtrAssetManager.h  CtrColorPass.cpp  CtrColorPass.h  CtrColorResolve.cpp  CtrColorResolve.h  CtrDepthResolve.cpp  CtrDepthResolve.h  CtrFileChangeWatcher.cpp  CtrFileChangeWatcher.h  CtrFilterCubemap.h  CtrFrameBuffer.cpp  CtrFrameBuffer.h  CtrGpuConstantBuffer.cpp  CtrGpuConstantBuffer.h  CtrGpuTechnique.cpp  CtrGpuTechnique.h  CtrGpuVariable.cpp  CtrGpuVariable.h  CtrHDRPresentationPolicy.cpp  CtrHDRPresentationPolicy.h  CtrIBLProbe.cpp  CtrIBLProbe.h  CtrIBLRenderPass.cpp  CtrIBLRenderPass.h  CtrIComputeShader.cpp  CtrIComputeShader.h  CtrIDepthSurface.cpp  CtrIDepthSurface.h  CtrIDevice.cpp  CtrIDevice.h  CtrIEffect.cpp  CtrIEffect.h  CtrIGpuBuffer.cpp  CtrIGpuBuffer.h  CtrIIndexBuffer.cpp  CtrIIndexBuffer.h  CtrIRenderResource.cpp  CtrIRenderResource.h  CtrIRenderResourceParameters.cpp  (+42 more)
rendererD3D11/: CtrBackbufferSurfaceD3D11.cpp  CtrBackbufferSurfaceD3D11.h  CtrBufferD3D11.cpp  CtrBufferD3D11.h  CtrComputeShaderD3D11.cpp  CtrComputeShaderD3D11.h  CtrDepthSurfaceD3D11.cpp  CtrDepthSurfaceD3D11.h  CtrEffectD3D11.cpp  CtrEffectD3D11.h  CtrFormatConversionD3D11.cpp  CtrFormatConversionD3D11.h  CtrGpuConstantBufferD3D11.cpp  CtrGpuConstantBufferD3D11.h  CtrGpuTechniqueD3D11.cpp  CtrGpuTechniqueD3D11.h  CtrGpuVariableD3D11.cpp  CtrGpuVariableD3D11.h  CtrIndexBufferD3D11.cpp  CtrIndexBufferD3D11.h  CtrInputLayoutCacheD3D11.cpp  CtrInputLayoutCacheD3D11.h  CtrRenderDeviceD3D11.cpp  CtrRenderDeviceD3D11.h  CtrRenderTargetTextureD3D11.cpp  CtrRenderTargetTextureD3D11.h  CtrRenderWindow.cpp  CtrRenderWindow.h  CtrRenderWindowD3D11.cpp  CtrRenderWindowD3D11.h  CtrShaderD3D11.cpp  CtrShaderD3D11.h  CtrSurfaceD3D11.cpp  CtrSurfaceD3D11.h  CtrTexture2DD3D11.cpp  CtrTexture2DD3D11.h  CtrTextureD3D11.cpp  CtrTextureD3D11.h  CtrVertexBufferD3D11.cpp  CtrVertexBufferD3D11.h  (+2 more)
rendererD3D11/effectsD3D11/: EffectAPI.cpp  EffectRuntime.cpp
rendererD3D11/effectsD3D11/Inc/: d3dx11effect.h  d3dxGlobal.h
rendererD3D11/errorD3D11/: DxErr.h  dxerr.cpp
resources/: resource.h
swizzling/: CtrImageConversion.h  CtrImageFunctionNode.h
ui/: CtrImageWidget.cpp  CtrImageWidget.h  CtrRenderHUD.cpp  CtrRenderHUD.h
